feat: add application version support for versions requests