@@ -8,6 +8,11 @@ import net.ripe.db.whois.api.rest.domain.WhoisObject;
 import net.ripe.db.whois.api.rest.domain.WhoisResources;
 import net.ripe.db.whois.api.rest.domain.WhoisVersion;
 import net.ripe.db.whois.api.rest.domain.WhoisVersions;
+import net.ripe.db.whois.api.rest.domain.Version;
+import net.ripe.db.whois.common.ApplicationVersion;
+
+import static org.hamcrest.Matchers.not;
+import static org.hamcrest.Matchers.notNullValue;
 import net.ripe.db.whois.common.MaintenanceMode;
 import net.ripe.db.whois.common.rpsl.RpslAttribute;
 import net.ripe.db.whois.common.rpsl.RpslObject;
@@ -33,26 +38,39 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @Tag("IntegrationTest")
 public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest {
+    @Autowired
+    private ApplicationVersion applicationVersion;
 
-    private static final RpslObject OWNER_MNT = RpslObject.parse("" +
-            "mntner:      OWNER-MNT\n" +
-            "descr:       Owner Maintainer\n" +
-            "admin-c:     TP1-TEST\n" +
-            "upd-to:      noreply@ripe.net\n" +
-            "auth:        MD5-PW $1$d9fKeTr2$Si7YudNf4rUGmR71n/cqk/ #test\n" +
-            "auth:        SSO person@net.net\n" +
-            "mnt-by:      OWNER-MNT\n" +
-            "source:      TEST");
+    private static final RpslObject OWNER_MNT = RpslObject.parse(
+    """
+    mntner:      OWNER-MNT
+    descr:       Owner Maintainer
+    admin-c:     TP1-TEST
+    upd-to:      noreply@ripe.net
+    auth:        MD5-PW $1$d9fKeTr2$Si7YudNf4rUGmR71n/cqk/ #test
+    auth:        SSO person@net.net
+    mnt-by:      OWNER-MNT
+    source:      TEST
+    """);
 
-    private static final RpslObject TEST_PERSON = RpslObject.parse("" +
-            "person:    Test Person\n" +
-            "address:   Singel 258\n" +
-            "phone:     +31 6 12345678\n" +
-            "nic-hdl:   TP1-TEST\n" +
-            "mnt-by:    OWNER-MNT\n" +
-            "source:    TEST\n");
+    private static final RpslObject TEST_PERSON = RpslObject.parse(
+    """
+    person:    Test Person
+    address:   Singel 258
+    phone:     +31 6 12345678
+    nic-hdl:   TP1-TEST
+    mnt-by:    OWNER-MNT
+    source:    TEST
+    """);
 
     private static final String VERSION_DATE_PATTERN = "\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}Z";
+
+    private void assertApplicationVersion(final Version version) {
+        assertThat(version, is(notNullValue()));
+        assertThat(version.getVersion(), is(applicationVersion.getVersion()));
+        assertThat(version.getTimestamp(), is(applicationVersion.getTimestamp()));
+        assertThat(version.getCommitId(), is(applicationVersion.getCommitId()));
+    }
 
     @Autowired
     private MaintenanceMode maintenanceMode;
@@ -69,14 +87,16 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void versions_returns_xml() {
-        databaseHelper.addObject("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         final WhoisResources whoisResources = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions")
                 .request(MediaType.APPLICATION_XML)
@@ -87,41 +107,47 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
         assertThat(whoisVersions.getType(), is("aut-num"));
         assertThat(whoisVersions.getKey(), is("AS102"));
         assertThat(whoisVersions.getVersions(), hasSize(1));
-        final WhoisVersion whoisVersion = whoisVersions.getVersions().get(0);
+        final WhoisVersion whoisVersion = whoisVersions.getVersions().getFirst();
         assertThat(whoisVersion, is(new WhoisVersion("ADD/UPD", whoisVersion.getDate(), 1)));
     }
 
     @Test
     public void versions_deleted() {
-        final RpslObject autnum = RpslObject.parse("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        final RpslObject autnum = RpslObject.parse(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
         databaseHelper.addObject(autnum);
         databaseHelper.deleteObject(autnum);
         databaseHelper.addObject(autnum);
-        databaseHelper.updateObject("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-3\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        databaseHelper.updateObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-3
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
         databaseHelper.deleteObject(autnum);
         databaseHelper.addObject(autnum);
-        databaseHelper.updateObject("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        databaseHelper.updateObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         final WhoisResources whoisResources = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions")
                 .request(MediaType.APPLICATION_XML)
@@ -131,10 +157,10 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
         final List<WhoisVersion> versions = whoisResources.getVersions().getVersions();
         assertThat(versions, hasSize(2));
 
-        assertThat(versions.get(0).getDeletedDate(), is(nullValue()));
-        assertThat(versions.get(0).getOperation(), is("ADD/UPD"));
-        assertThat(versions.get(0).getRevision(), is(1));
-        assertThat(versions.get(0).getDate(), stringMatchesRegexp(VERSION_DATE_PATTERN));
+        assertThat(versions.getFirst().getDeletedDate(), is(nullValue()));
+        assertThat(versions.getFirst().getOperation(), is("ADD/UPD"));
+        assertThat(versions.getFirst().getRevision(), is(1));
+        assertThat(versions.getFirst().getDate(), stringMatchesRegexp(VERSION_DATE_PATTERN));
 
         assertThat(versions.get(1).getDeletedDate(), is(nullValue()));
         assertThat(versions.get(1).getOperation(), is("ADD/UPD"));
@@ -143,26 +169,186 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
     }
 
     @Test
+    public void versions_xml_contains_application_version() {
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
+
+        final WhoisResources whoisResources = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions")
+                .request(MediaType.APPLICATION_XML)
+                .get(WhoisResources.class);
+
+        assertApplicationVersion(whoisResources.getVersion());
+    }
+
+    @Test
+    public void versions_json_contains_application_version() {
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
+
+        final WhoisResources whoisResources = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions")
+                .request(MediaType.APPLICATION_JSON)
+                .get(WhoisResources.class);
+
+        assertApplicationVersion(whoisResources.getVersion());
+    }
+
+    @Test
+    public void version_xml_contains_application_version() {
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
+
+        final WhoisResources whoisResources = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions/1")
+                .request(MediaType.APPLICATION_XML)
+                .get(WhoisResources.class);
+
+        assertApplicationVersion(whoisResources.getVersion());
+    }
+
+    @Test
+    public void versions_text_plain_has_no_application_version() {
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
+
+        final String response = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions")
+                .request(MediaType.TEXT_PLAIN)
+                .get(String.class);
+
+        assertThat(response, not(containsString("commit-id")));
+        assertThat(response, containsString("Version history for AUT-NUM object \"AS102\""));
+    }
+
+    @Test
+    public void version_text_plain_has_no_application_version() {
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
+
+        final String response = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions/1")
+                .request(MediaType.TEXT_PLAIN)
+                .get(String.class);
+
+        assertThat(response, is(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """));
+    }
+
+    @Test
+    public void version_json_contains_application_version() {
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
+
+        final WhoisResources whoisResources = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions/1")
+                .request(MediaType.APPLICATION_JSON)
+                .get(WhoisResources.class);
+
+        assertApplicationVersion(whoisResources.getVersion());
+    }
+
+    @Test
+    public void version_and_lookup_report_same_application_version() {
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
+
+        final Version fromVersion = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions/1")
+                .request(MediaType.APPLICATION_XML)
+                .get(WhoisResources.class)
+                .getVersion();
+
+        final Version fromLookup = RestTest.target(getPort(), "whois/test/aut-num/AS102")
+                .request(MediaType.APPLICATION_XML)
+                .get(WhoisResources.class)
+                .getVersion();
+
+        assertThat(fromVersion.getVersion(), is(fromLookup.getVersion()));
+        assertThat(fromVersion.getTimestamp(), is(fromLookup.getTimestamp()));
+        assertThat(fromVersion.getCommitId(), is(fromLookup.getCommitId()));
+    }
+
+    @Test
     public void versions_deleted_versions_json() {
-        final RpslObject autnum = RpslObject.parse("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        final RpslObject autnum = RpslObject.parse(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
         databaseHelper.addObject(autnum);
         databaseHelper.deleteObject(autnum);
         databaseHelper.addObject(autnum);
-        databaseHelper.updateObject("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        databaseHelper.updateObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         final WhoisResources whoisResources = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions")
                 .request(MediaType.APPLICATION_JSON)
@@ -172,10 +358,10 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
         final List<WhoisVersion> versions = whoisResources.getVersions().getVersions();
         assertThat(versions, hasSize(2));
 
-        assertThat(versions.get(0).getDeletedDate(), is(nullValue()));
-        assertThat(versions.get(0).getOperation(), is("ADD/UPD"));
-        assertThat(versions.get(0).getRevision(), is(1));
-        assertThat(versions.get(0).getDate(), stringMatchesRegexp(VERSION_DATE_PATTERN));
+        assertThat(versions.getFirst().getDeletedDate(), is(nullValue()));
+        assertThat(versions.getFirst().getOperation(), is("ADD/UPD"));
+        assertThat(versions.getFirst().getRevision(), is(1));
+        assertThat(versions.getFirst().getDate(), stringMatchesRegexp(VERSION_DATE_PATTERN));
 
         assertThat(versions.get(1).getDeletedDate(), is(nullValue()));
         assertThat(versions.get(1).getOperation(), is("ADD/UPD"));
@@ -185,15 +371,16 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void versions_return_text() {
-        final RpslObject autnum = RpslObject.parse("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
-        databaseHelper.addObject(autnum);
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         final String response = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions")
                 .request(MediaType.TEXT_PLAIN)
@@ -207,15 +394,16 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void versions_return_text_with_txt_extension() {
-        final RpslObject autnum = RpslObject.parse("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
-        databaseHelper.addObject(autnum);
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         final String response = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions.txt")
                 .request()
@@ -229,15 +417,16 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void versions_text_header_format() {
-        final RpslObject autnum = RpslObject.parse("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
-        databaseHelper.addObject(autnum);
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         final String response = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions")
                 .request(MediaType.TEXT_PLAIN)
@@ -250,15 +439,16 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void versions_text_single_version_row() {
-        final RpslObject autnum = RpslObject.parse("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
-        databaseHelper.addObject(autnum);
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         final String response = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions")
                 .request(MediaType.TEXT_PLAIN)
@@ -269,23 +459,26 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void versions_text_multiple_versions_listed() {
-        final RpslObject autnum = RpslObject.parse("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
-        databaseHelper.addObject(autnum);
-        databaseHelper.updateObject("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-3\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
+        databaseHelper.updateObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-3
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         final String response = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions")
                 .request(MediaType.TEXT_PLAIN)
@@ -297,14 +490,16 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void versions_text_excludes_leading_deleted_version() {
-        final RpslObject autnum = RpslObject.parse("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        final RpslObject autnum = RpslObject.parse(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
         databaseHelper.addObject(autnum);
         databaseHelper.deleteObject(autnum);
         databaseHelper.addObject(autnum);
@@ -328,14 +523,16 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void versions_last_version_deleted() {
-        final RpslObject autnum = RpslObject.parse("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        final RpslObject autnum = RpslObject.parse(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
         databaseHelper.addObject(autnum);
         databaseHelper.deleteObject(autnum);
 
@@ -359,60 +556,70 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void version_returns_text() {
-        databaseHelper.addObject("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         final String response = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions/1")
                 .request(MediaType.TEXT_PLAIN)
                 .get(String.class);
 
-        assertThat(response, is("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n"));
+        assertThat(response, is(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """));
     }
 
     @Test
     public void version_returns_text_with_txt_extension() {
-        databaseHelper.addObject("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         final String response = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions/1.txt")
                 .request()
                 .get(String.class);
 
-        assertThat(response, is("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n"));
+        assertThat(response, is(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """));
     }
 
     @Test
     public void version_text_contains_all_attributes() {
-        databaseHelper.addObject("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         final String response = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions/1")
                 .request(MediaType.TEXT_PLAIN)
@@ -427,22 +634,26 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void version_text_returns_correct_revision() {
-        databaseHelper.addObject("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
-        databaseHelper.updateObject("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-3\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
+        databaseHelper.updateObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-3
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         final String version1 = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions/1")
                 .request(MediaType.TEXT_PLAIN)
@@ -457,14 +668,16 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void version_text_nonexistent_version_returns_not_found() {
-        databaseHelper.addObject("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         assertThrows(NotFoundException.class, () -> {
             RestTest.target(getPort(), "whois/test/aut-num/AS102/versions/2")
@@ -475,14 +688,16 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void version_text_wrong_object_type_returns_not_found() {
-        databaseHelper.addObject("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         assertThrows(NotFoundException.class, () -> {
             RestTest.target(getPort(), "whois/test/inetnum/AS102/versions/1")
@@ -493,14 +708,16 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void version_text_deleted_version_returns_not_found() {
-        final RpslObject autnum = RpslObject.parse("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        final RpslObject autnum = RpslObject.parse(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
         databaseHelper.addObject(autnum);
         databaseHelper.deleteObject(autnum);
 
@@ -513,14 +730,16 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void version_nonexistant_version() {
-        databaseHelper.addObject("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         assertThrows(NotFoundException.class, () -> {
             RestTest.target(getPort(), "whois/test/aut-num/AS102/versions/2")
@@ -531,14 +750,16 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void version_wrong_object_type() {
-        databaseHelper.addObject("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         assertThrows(NotFoundException.class, () -> {
             RestTest.target(getPort(), "whois/test/inetnum/AS102/versions/1")
@@ -549,15 +770,16 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void version_returns_xml() {
-        final RpslObject autnum = RpslObject.parse("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
-        databaseHelper.addObject(autnum);
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         final WhoisResources whoisResources = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions/1")
                 .request(MediaType.APPLICATION_XML)
@@ -565,17 +787,19 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
         assertThat(whoisResources.getErrorMessages(), is(empty()));
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
-        final WhoisObject object = whoisResources.getWhoisObjects().get(0);
+        final WhoisObject object = whoisResources.getWhoisObjects().getFirst();
         assertThat(object.getType(), is("aut-num"));
         assertThat(object.getVersion(), is(1));
 
         final List<Attribute> attributes = object.getAttributes();
-        final List<RpslAttribute> originalAttributes =  RpslObject.parse("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n")
+        final List<RpslAttribute> originalAttributes =  RpslObject.parse(
+                        """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """)
                 .getAttributes();
 
         for (int i = 0; i < originalAttributes.size(); i++) {
@@ -585,17 +809,18 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void version_returns_json() {
-        final RpslObject autnum = RpslObject.parse("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "e-mail:          test@test.nl\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "notify:         notify@me.nl\n" +
-                "source:         TEST\n");
-        databaseHelper.addObject(autnum);
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                e-mail:          test@test.nl
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                notify:         notify@me.nl
+                source:         TEST
+                """);
 
         final WhoisResources whoisResources = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions/1")
                 .request(MediaType.APPLICATION_JSON)
@@ -603,18 +828,20 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
         assertThat(whoisResources.getErrorMessages(), is(empty()));
         assertThat(whoisResources.getWhoisObjects(), hasSize(1));
-        final WhoisObject object = whoisResources.getWhoisObjects().get(0);
+        final WhoisObject object = whoisResources.getWhoisObjects().getFirst();
         assertThat(object.getType(), is("aut-num"));
         assertThat(object.getVersion(), is(1));
 
         final List<Attribute> attributes = object.getAttributes();
 
-        final List<RpslAttribute> originalAttributes = RpslObject.parse("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n")
+        final List<RpslAttribute> originalAttributes = RpslObject.parse(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """)
                 .getAttributes();
 
         for (int i = 0; i < originalAttributes.size(); i++) {
@@ -624,14 +851,16 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void version_not_showing_deleted_version() {
-        final RpslObject autnum = RpslObject.parse("" +
-                "aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        final RpslObject autnum = RpslObject.parse(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
         databaseHelper.addObject(autnum);
         databaseHelper.deleteObject(autnum);
 
@@ -644,13 +873,16 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void lookup_non_streaming_puts_xlink_into_root_element_and_nowhere_else() {
-        databaseHelper.addObject("aut-num:        AS102\n" +
-                "as-name:        End-User-2\n" +
-                "descr:          description\n" +
-                "admin-c:        TP1-TEST\n" +
-                "tech-c:         TP1-TEST\n" +
-                "mnt-by:         OWNER-MNT\n" +
-                "source:         TEST\n");
+        databaseHelper.addObject(
+                """
+                aut-num:        AS102
+                as-name:        End-User-2
+                descr:          description
+                admin-c:        TP1-TEST
+                tech-c:         TP1-TEST
+                mnt-by:         OWNER-MNT
+                source:         TEST
+                """);
 
         final String whoisResources = RestTest.target(getPort(), "whois/test/aut-num/AS102/versions/1").request(MediaType.APPLICATION_XML).get(String.class);
 
@@ -661,7 +893,8 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
 
     @Test
     public void lookup_role_text_plain_extension_utf8() {
-        final RpslObject inetnumV1 = RpslObject.parse("""
+        final RpslObject inetnumV1 = RpslObject.parse(
+                """
                 inetnum:      192.168.0.0 - 192.169.255.255
                 netname:      TEST-NET-NAME
                 descr:        TEST network
@@ -674,7 +907,8 @@ public class WhoisVersionServiceTestIntegration extends AbstractIntegrationTest 
                 source:       TEST
                 """);
 
-        final RpslObject inetnumV2 = RpslObject.parse("""
+        final RpslObject inetnumV2 = RpslObject.parse(
+                """
                 inetnum:      192.168.0.0 - 192.169.255.255
                 netname:      TEST-NET-NAME
                 descr:        TEST network
